Fix scrollbar css bug

--- a/labeling-ui/Styles/_button.scss
+++ b/labeling-ui/Styles/_button.scss
@@ -4,6 +4,7 @@ button {
   font-weight: bold;
   font-size: 18px;
   border: none;
+  padding: 0.3em;
 
   &:hover {
     color: $icon-hover;
